--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="main">
     <section id="about">
       <div id="about-picture">
-        <img src="/assets/profile_pic.jpg" alt="" id="profile-pic">
+        <img src="./assets/profile_pic.jpg" alt="" id="profile-pic">
       </div>
       <div id="about-content"></div>
       <h2>Andrew Baker's Bio</h2>
