--- a/artist_statement.html
+++ b/artist_statement.html
@@ -18,7 +18,7 @@
     <div class="main">
         <section id="about">
           <div id="#joy_ii">
-            <img src="/assets/Joy II.jpg" alt="" id="joy_ii">
+            <img src="./assets/Joy II.jpg" alt="" id="joy_ii">
           </div>
     <div id="Artist Statement"></div>
     <h2>Artist Statement (2019)</h2>
