--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,7 +19,7 @@
     <div class="main">
         <section id="about">
             <div id="#daddy">
-                <img src="/assets/Daddy Come Quick.jpg" alt="" id="daddy">
+                <img src="./assets/Daddy Come Quick.jpg" alt="" id="daddy">
             </div>
             
             <h5><a href="http://baker0711.daportfolio.com/?fbclid=IwAR2XUsCMWaNMYJuT2v5LYrCF59SdVKte9wtGXA2DznIWpgXQ1uwYApMtNLY">A
